# zatca_erpgulf_sync

./: README.md  pyproject.toml
zatca_erpgulf_sync/: hooks.py  modules.txt
zatca_erpgulf_sync/zatca_erpgulf_sync/: invoice_sync.py  pdfa3.py
zatca_erpgulf_sync/zatca_erpgulf_sync/doctype/intermediate_server_setting/: intermediate_server_setting.js  intermediate_server_setting.json  intermediate_server_setting.py  test_intermediate_server_setting.py
zatca_erpgulf_sync/zatca_erpgulf_sync/doctype/item_for_intermediate_server/: item_for_intermediate_server.json  item_for_intermediate_server.py
zatca_erpgulf_sync/zatca_erpgulf_sync/doctype/taxes/: taxes.json  taxes.py
